syntax = "proto3";
package cores;

option go_package = "github.com/snple/kirara/pb/cores;cores";

import "const_message.proto";
import "generic_message.proto";

message ConstListRequest {
    pb.Page page = 1;
    string device_id = 2;
    string tags = 3;
    string type = 4;
}

message ConstListResponse {
    pb.Page page = 1;
    uint32 count = 2;
    repeated pb.Const const = 3;
}

message ConstNameRequest {
    string device_id = 1;
    string name = 2;
}

message ConstCloneRequest {
    string id = 1;
    string device_id = 2;
}

message ConstGetValueByNameRequest {
    string device_id = 1;
    string name = 2;
}

message ConstNameValue {
    string device_id = 1;
    string id = 2;
    string name = 3;
    string value = 4;
    int64 updated = 5;
}

message ConstPullRequest {
    int64 after = 1;
    uint32 limit = 2;
    string device_id = 3;
    string type = 4;
}

message ConstPullResponse {
    int64 after = 1;
    uint32 limit = 2;
    repeated pb.Const const = 3;
}

service ConstService {
    rpc Create(pb.Const) returns (pb.Const) {}
    rpc Update(pb.Const) returns (pb.Const) {}
    rpc View(pb.Id) returns (pb.Const) {}
    rpc Name(ConstNameRequest) returns (pb.Const) {}
    rpc NameFull(pb.Name) returns (pb.Const) {}
    rpc Delete(pb.Id) returns (pb.MyBool) {}
    rpc List(ConstListRequest) returns (ConstListResponse) {}
    rpc Clone(ConstCloneRequest) returns (pb.MyBool) {}
    rpc ViewWithDeleted(pb.Id) returns (pb.Const) {}
    rpc Pull(ConstPullRequest) returns (ConstPullResponse) {}
    rpc Sync(pb.Const) returns (pb.MyBool) {}
    rpc GetValue(pb.Id) returns (pb.ConstValue) {}
    rpc SetValue(pb.ConstValue) returns (pb.MyBool) {}
    rpc SetValueForce(pb.ConstValue) returns (pb.MyBool) {}
    rpc GetValueByName(ConstGetValueByNameRequest) returns (ConstNameValue) {}
    rpc SetValueByName(ConstNameValue) returns (pb.MyBool) {}
    rpc SetValueByNameForce(ConstNameValue) returns (pb.MyBool) {}
}
