syntax = "proto3";
package slots;

option go_package = "github.com/snple/kirara/pb/slots;slots";

import "slot_message.proto";
import "generic_message.proto";

message LoginSlotRequest {
    string id = 1;
    string secret = 2;
}

message LoginSlotReply {
    string id = 1;
    string token = 2;
}

message SlotLinkRequest {
    // string id = 1;
    sint32 status = 2;
}

service SlotService {
    rpc Login(LoginSlotRequest) returns (LoginSlotReply) {}
    rpc Update(pb.Slot) returns (pb.Slot) {}
    rpc View(pb.MyEmpty) returns (pb.Slot) {}
    rpc Link(SlotLinkRequest) returns (pb.MyBool) {}
}
